# pcf_fact_checking

./: README.md  engineering.py  index.html  index.qmd  pyproject.toml  testfig.html
data/: all_reliability.xlsx
raw/2010/: Advanced_Meters_2010.xlsx  Control_Area_Operator_2010.xlsx  Distributed_2010.xlsx  Green_Pricing_2010.xlsx  Mergers_2010.xlsx  Net_Metering_2010.xlsx  Operational_Data_2010.xlsx  Sales_Ult_Cust_2010.xlsx  Sales_Ult_Cust_CS_2010.xlsx  Service_Territory_2010.xlsx  Utility_Data_2010.xlsx
raw/2011/: Advanced_Meters_2011.xlsx  Control_Area_Operator_2011.xlsx  Distributed_2011.xlsx  Green_Pricing_2011.xlsx  Mergers_2011.xlsx  Net_Metering_2011.xlsx  Operational_Data_2011.xlsx  Sales_Ult_Cust_CS_2011.xlsx  Service_Territory_2011.xlsx  Utility_Data_2011.xlsx
raw/f8612012/: Sales_Ult_Cust_CS_2012.xlsx
raw/f8612013/: Reliability_2013.xlsx  Sales_Ult_Cust_2013.xls
raw/f8612014/: Reliability_2014.xlsx
raw/f8612015/: Reliability_2015.xlsx
raw/f8612016/: Reliability_2016.xlsx
raw/f8612017/: Reliability_2017.xlsx
raw/f8612018/: Reliability_2018.xlsx
raw/f8612024/: Reliability_2024.xlsx
